deploy/enmasse/console.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: console
  namespace: enmasse-infra
  labels:
    app: enmasse
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: console.sandbox.enmasse.io
    http:
      paths:
      - backend:
          serviceName: console
          servicePort: https
        path: /
  tls:
  - hosts:
      - console.sandbox.enmasse.io
    secretName: console-cert
